@@ -603,72 +603,6 @@ nextentry:
   return retval;
 }
 
-bool
-DboxMain::FindNext(const CString &cs_char)
-{
-  int iItem;
-  bool bFound(false);
-
-  TCHAR tcsItemText[2];
-  LVITEM lvi;
-  memset(&lvi, 0x00, sizeof(LVITEM));
-
-  lvi.mask = LVIF_TEXT;
-  if (m_bImageInLV)
-    lvi.iSubItem = 1;
-  else
-    lvi.iSubItem = 0;
-  lvi.cchTextMax = sizeof(tcsItemText) / sizeof(TCHAR);
-  lvi.pszText = tcsItemText;
-
-  // Get selected item, if any
-  POSITION pos = m_ctlItemList.GetFirstSelectedItemPosition();
-
-  // First search down.
-  if (pos == NULL)
-    iItem = 0;
-  else
-    iItem = (int)pos;
-
-  do {
-    lvi.iItem = iItem;
-    memset(tcsItemText, 0x00, sizeof(tcsItemText));
-    if (m_ctlItemList.GetItem(&lvi) == 0)
-      break;
-
-    const CString cs_text(tcsItemText);
-    if (cs_text.GetLength() > 0 && cs_char.CompareNoCase(cs_text) == 0) {
-      bFound = true;
-      break;
-    }
-    iItem++;
-  } while (true);
-
-  // Not found searching down and we didn't start from the top, now start from the top until
-  // we get to where we started!
-  if (!bFound && pos != NULL) {
-    iItem = 0;
-    do {
-      lvi.iItem = iItem;
-      memset(tcsItemText, 0x00, sizeof(TCHAR) * 2);
-      if (m_ctlItemList.GetItem(&lvi) == 0)
-        break;
-
-      const CString cs_text(tcsItemText);
-      if (cs_text.GetLength() > 0 && cs_char.CompareNoCase(cs_text) == 0) {
-        bFound = true;
-        break;
-      }
-      iItem++;
-    } while (iItem != (int)pos);
-  }
-
-  if (bFound)
-    SelectFindEntry(iItem, TRUE);
-
-  return bFound;
-}
-
 //Checks and sees if everything works and something is selected
 BOOL
 DboxMain::SelItemOk()
